metrique/tests/ui/fail/bad_field_attrs.stderr
error: Unknown field: `bad_root_attr`. Available values: `emf::dimension_sets`, `exact_prefix`, `prefix`, `rename_all`, `subfield`, `subfield_owned`, `value`
 --> tests/ui/fail/bad_field_attrs.rs:6:38
  |
6 | #[metrics(rename_all = "snake_case", bad_root_attr, bad_root_attr_eq = "foo")]
  |                                      ^^^^^^^^^^^^^

error: Unknown field: `bad_root_attr_eq`. Available values: `emf::dimension_sets`, `exact_prefix`, `prefix`, `rename_all`, `subfield`, `subfield_owned`, `value`
 --> tests/ui/fail/bad_field_attrs.rs:6:53
  |
6 | #[metrics(rename_all = "snake_case", bad_root_attr, bad_root_attr_eq = "foo")]
  |                                                     ^^^^^^^^^^^^^^^^

error: Duplicate field `name`
  --> tests/ui/fail/bad_field_attrs.rs:10:27
   |
10 |     #[metrics(name = "a", name = "b")]
   |                           ^^^^

error: Duplicate field `unit`
  --> tests/ui/fail/bad_field_attrs.rs:14:31
   |
14 |     #[metrics(unit = Seconds, unit = Minutes)]
   |                               ^^^^

error: Cannot combine flatten with name
  --> tests/ui/fail/bad_field_attrs.rs:17:24
   |
17 |     #[metrics(flatten, name = "foo")]
   |                        ^^^^

error: Unexpected type `int`
  --> tests/ui/fail/bad_field_attrs.rs:20:22
   |
20 |     #[metrics(name = 5)]
   |                      ^

error: Unknown field: `nme`. Did you mean `name`?
  --> tests/ui/fail/bad_field_attrs.rs:23:15
   |
23 |     #[metrics(nme = "foo")]
   |               ^^^

error: invalid name: name field must not be empty
  --> tests/ui/fail/bad_field_attrs.rs:26:22
   |
26 |     #[metrics(name = "")]
   |                      ^^

error: invalid name: name must not contain spaces
  --> tests/ui/fail/bad_field_attrs.rs:29:22
   |
29 |     #[metrics(name = "a b")]
   |                      ^^^^^

error: Cannot combine ignore with no_close
  --> tests/ui/fail/bad_field_attrs.rs:32:15
   |
32 |     #[metrics(ignore, no_close)]
   |               ^^^^^^

error: prefix can only be used with `flatten`
  --> tests/ui/fail/bad_field_attrs.rs:35:15
   |
35 |     #[metrics(prefix = "foo")]
   |               ^^^^^^

error: Found ':' in inflected prefix. `prefix` inflection treats all non-alphanumeric characters identically. Use `-` or `_` for an inflectable separator, or use `exact_prefix` for a separator that will not be inflected.
  --> tests/ui/fail/bad_field_attrs.rs:38:24
   |
38 |     #[metrics(flatten, prefix = "foo:")]
   |                        ^^^^^^

error: Cannot combine `prefix` with `exact_prefix`
  --> tests/ui/fail/bad_field_attrs.rs:41:24
   |
41 |     #[metrics(flatten, prefix = "foo", exact_prefix = "bar")]
   |                        ^^^^^^

error: Cannot combine `prefix` with `exact_prefix`
  --> tests/ui/fail/bad_field_attrs.rs:50:11
   |
50 | #[metrics(prefix = "foo", exact_prefix = "foo")]
   |           ^^^^^^

error: Found '@' in inflected prefix. `prefix` inflection treats all non-alphanumeric characters identically. Use `-` or `_` for an inflectable separator, or use `exact_prefix` for a separator that will not be inflected.
  --> tests/ui/fail/bad_field_attrs.rs:55:11
   |
55 | #[metrics(prefix = "foo@")]
   |           ^^^^^^
